--- a/PSS/PSS/Shared/LibraryContentViewer.razor
+++ b/PSS/PSS/Shared/LibraryContentViewer.razor
@@ -1,6 +1,6 @@
 @*
-Component used in Index, Starred, AlbumView, and Trash for displaying items in the PSS library in small chunks at a time.
-More content is added when mouse enters the top or bottom of the screen.
+Component used in Index, Starred, AlbumView, and Trash for displaying items in the PSS library in small chunks at a time, as well as other shared behavior like showing prompts when deleting items, etc.
+More content is added when mouse enters the top or bottom of the screen, as long as there is more content with date taken before/after the content already loaded.
 The default amount of items loaded at a time is 50.
 If it can't find any content, it shows an h1 saying no content.
 *@
