TwoChoiceInput now always stays in center of screen and has a slightly transparent background behind it

--- a/PSS/PSS/Shared/TwoChoiceInput.razor
+++ b/PSS/PSS/Shared/TwoChoiceInput.razor
@@ -15,11 +15,13 @@
 @using PSS.Backend
 <link href="css/components/TwoChoiceInput.css" rel="stylesheet">
 
-<div id="inputDiv" style="visibility: @TwoChoiceVis; @PositioningStyle">
-    <span id="message">@Message</span>
-    <div id="buttons">
-        <button class="textBtn" @onclick="@(() => NoBtnClick.Invoke())"><span class="material-icons-outlined">@NoBtnIcon</span><span>@NoBtnText</span></button>
-        <button class="textBtn" @onclick="@(() => YesBtnClick.Invoke())"><span class="material-icons-outlined">@YesBtnIcon</span><span>@YesBtnText</span></button>
+<div id="inputBackground" style="visibility: @TwoChoiceVis">
+    <div id="inputDiv" style="@PositioningStyle">
+        <span id="message">@Message</span>
+        <div id="buttons">
+            <button class="textBtn" @onclick="@(() => NoBtnClick.Invoke())"><span class="material-icons-outlined">@NoBtnIcon</span><span>@NoBtnText</span></button>
+            <button class="textBtn" @onclick="@(() => YesBtnClick.Invoke())"><span class="material-icons-outlined">@YesBtnIcon</span><span>@YesBtnText</span></button>
+        </div>
     </div>
 </div>
 
@@ -47,7 +49,7 @@
     public string NoBtnText { get; set; } = "No";
     
     [Parameter]
-    public string PositioningStyle { get; set; } = "position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);";
+    public string PositioningStyle { get; set; } = "position: fixed; left: 50%; top: 50%; transform: translate(-50%, -50%);";
     
     [Parameter]
     public string YesBtnIcon { get; set; } = "check";
