--- a/PSS/PSS/wwwroot/css/components/TwoChoiceInput.css
+++ b/PSS/PSS/wwwroot/css/components/TwoChoiceInput.css
@@ -2,15 +2,25 @@
     user-select: none;
 }
 
-#inputDiv {
+#inputBackground {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(72, 71, 71, 0.41);
+    z-index: 9999;
+}
+
+#inputBackground > #inputDiv {
     background-color: black;
     border: 1px solid white;
     width: 250px;
     height: 170px;
-    z-index: 9999;
+    z-index: 999;
 }
 
-#inputDiv > #message {
+#inputBackground > #inputDiv > #message {
     text-align: center;
     overflow-wrap: break-word;
     position: absolute;
@@ -20,7 +30,7 @@
     transform: translate(-50%, -50%);
 }
 
-#inputDiv > #buttons {
+#inputBackground > #inputDiv > #buttons {
     display: flex;
     flex-direction: row;
     position: absolute;
@@ -28,7 +38,7 @@
     right: 10px;
 }
 
-#inputDiv > #buttons > button {
+#inputBackground > #inputDiv > #buttons > button {
     margin-left: 10px;
     height: 40px;
     min-width: 90px;
