--- a/PSS/PSS/Shared/LibraryContentViewer.razor
+++ b/PSS/PSS/Shared/LibraryContentViewer.razor
@@ -1,5 +1,5 @@
 @*
-Component used in Index, Starred, AlbumView, and Trash for displaying items in the PSS library in small chunks at a time, as well as other shared behavior like showing prompts when deleting items, etc.
+Component used in Index, Starred, AlbumView, No Date Taken, and Trash for displaying items in the PSS library in small chunks at a time, as well as other shared behavior like showing prompts when deleting items, etc.
 More content is added when mouse enters the top or bottom of the screen, as long as there is more content with date taken before/after the content already loaded.
 The default amount of items loaded at a time is 50.
 If it can't find any content, it shows an h1 saying no content.
@@ -42,10 +42,12 @@ else
 		}
 		<div id="moreContentBottomDiv" style="visibility: @moreContentBottomDivVis" @onmouseover="@AddContentBottom" @onscroll="@AddContentBottom" @onmousewheel="@AddContentBottom" @onpointerenter="@AddContentBottom" @ontouchenter="@AddContentBottom"></div>
 	</div>
+	
+	<TwoChoiceInput @bind-TwoChoiceVis="@delPromptVis" YesBtnClick="@DeleteSelected" NoBtnClick="@(() => delPromptVis = "hidden")" Message="@(SelectedItems.Count > 1 ? "Delete Selected Items?" : "Delete Selected Item?")"/>
+	<TwoChoiceInput YesBtnIcon="star" YesBtnText="Add" NoBtnIcon="star_outline" NoBtnText="Remove" @bind-TwoChoiceVis="@starPromptVis" YesBtnClick="@(() => UpdateStars(true))" NoBtnClick="@(() => UpdateStars(false))" Message="@(SelectedItems.Count > 1 ? "Add or remove stars for selected items?" : "Add or remove star for selected item?")"/>
 }
 
 @code{
-
 	///Stores all content loaded.
 	public static List<C.MediaRow> MediaList { get; private set; }
 
@@ -74,7 +76,7 @@ else
 	///Used for binding HeaderVis
 	[Parameter]
 	public EventCallback<string> HeaderVisChanged { get; set; }
-	
+
 	///Gets how many items are selected. Page using this component needs to bind this so it's properly rendered in the &lt;header&gt;.
 	[Parameter]
 	public int SelectedItemsCount { get; set; }
@@ -95,13 +97,21 @@ else
 	[Parameter, EditorRequired]
 	public string NotNullDTQueryBottom { get; set; }
 	
+	///The name of the .zip file of downloaded items.
+	public string ZipFilename { get; private set; }
+
+	//Used for loading more content.
 	private static DateTime? oldestDT, newestDT;
 
+	//Controls the visibility of the divs that add more content.
 	private static string moreContentTopDivVis, moreContentBottomDivVis;
+	
+	//TwoChoiceInput's
+	private string delPromptVis;
+	public string starPromptVis;
 }
 
 @functions{
-
 	protected override void OnInitialized()
 	{
 		MediaList = new List<C.MediaRow>(150);
@@ -109,6 +119,7 @@ else
 		oldestDT = newestDT = null;
 		AddContent(NullDTQuery, null, ref oldestDT, ref moreContentBottomDivVis);
 		moreContentTopDivVis = moreContentBottomDivVis = "visible";
+		delPromptVis = starPromptVis = "hidden";
 	}
 	
 	///Modifies a checkmark's CSS class to show if checked/unchecked, and adds/removes the uuid from SelectedItems.
@@ -202,7 +213,6 @@ else
 			{
 				Guid currentID = MediaList[i].uuid;
 				if (SelectedItems.Contains(currentID)) continue;
-				// SelectedItems.Add(currentID); //TODO: is this needed?
 				await ToggleCheck(currentID);
 			}
 		}
@@ -217,37 +227,51 @@ else
 			SelectedItem = uuid; //Show this item in fullscreen.
 	}
 	
-	private async Task ClearChecks() //TODO: how to call this when <header> clear button is clicked? Action parameter?
+	public async Task ClearChecks()
 	{
 		foreach (Guid item in SelectedItems)
 			await JSRuntime.InvokeAsync<string>("removeCheck", item);
 		SelectedItems.Clear();
 		await HeaderVisChanged.InvokeAsync("hidden");
-		// albumsVis = "hidden"; //TODO
-		// choiceVis = "hidden";
+		delPromptVis = starPromptVis = "hidden";
 	}
 	
-	private void DeleteBtnClick() //TODO: how to call this when header delete button is clicked?
+	///Shows the TwoChoiceInput if enabled. If not, then deletes the selected items.
+	public void DeleteBtnClick()
 	{
 		if (S.showPrompts == false)
 		{
 			DeleteSelected();
 			return;
 		}
-		// choiceVis = "visible"; //TODO
-		// choiceMsg = SelectedItems.Count > 1 ? "Delete Selected Items?" : "Delete Selected Item?";
+		delPromptVis = "visible";
 	}
 
 	///Deletes all selected items.
-	private async void DeleteSelected()
+	public async void DeleteSelected()
 	{
 		foreach (Guid item in SelectedItems) //https://stackoverflow.com/a/604843
 		{
 			C.MoveToTrash(item);
-			await HeaderVisChanged.InvokeAsync("hidden");
+			MediaList.RemoveAll(u => u.uuid == item);
 		}
+
 		await ClearChecks();
-		// MediaList = C.LoadMediaTable(); //TODO
 		StateHasChanged();
+	}
+	
+	public void UpdateStars(bool starred)
+	{
+		// C.UpdateStarred(selectedItems, starred);
+		// await ClearChecks();
+		// starChoiceVis = "hidden";
+		// mediaList = C.LoadMediaTable(); //TODO: what to do here? Maybe set all the ones that changed to starred then re-render page?
+		StateHasChanged();
+	}
+	
+	public void DownloadSelected()
+	{ //TODO
+	// F.CopyItemsToZipPath((from media in mediaList where selectedItems.Contains(media.uuid) select media.path).ToList());
+	// zipFilename = await F.CreateDownloadZip();
 	}
 }
