--- a/PSS/PSS/Shared/LibraryContentViewer.razor
+++ b/PSS/PSS/Shared/LibraryContentViewer.razor
@@ -167,7 +167,7 @@ else
 
 			while (r.Read()) MediaList.Add(new C.MediaRow(r.GetString(0), r.IsDBNull(1) ? null : r.GetDateTime(1), r.GetDateTime(2), r.GetBoolean(3), r.GetGuid(4), r.IsDBNull(5) ? null : r.GetString(5)));
 			r.Close();
-			oldestDT = MediaList.Last().dateTaken;
+			oldestOrNewestDT = MediaList.Last().dateTaken;
 		}
 		catch (NpgsqlException e)
 		{
