--- a/PSS/PSS/Shared/AlbumSelector.razor
+++ b/PSS/PSS/Shared/AlbumSelector.razor
@@ -56,6 +56,9 @@
     private static List<bool> checkedAlbums;
     private static List<bool> checkedFolders;
     private static int checkedFolderIndex; //Which index in folders is checked (can only have 1 checked (true)).
+
+    [Parameter]
+    public C.MediaRow SelectedItem { get; set; }
     
     [Parameter] //Needs to be passed in
     public List<Guid> SelectedItems { get; set; } //Passed in from the page. Items selected by user
@@ -138,21 +141,38 @@
     public async void ConfirmBtnClick()
     {
         if (checkedFolderIndex != -1) //If a folder is selected this won't be -1
-            foreach (Guid item in SelectedItems) C.AddToAlbum(item, folders[checkedFolderIndex].id);
-        else
+        {
+            if (SelectedItem != null)
+            {
+                C.AddToAlbum(SelectedItem.uuid, folders[checkedFolderIndex].id);
+            }
+            else
+            {
+                foreach (Guid item in SelectedItems)
+                    C.AddToAlbum(item, folders[checkedFolderIndex].id);
+            }
+        }
+        else //Adding to album(s).
         {
             for (int c = 0; c < checkedAlbums.Count; c++)
             {
                 if (checkedAlbums[c] == false) continue;
 
-                foreach (Guid item in SelectedItems)
-                    C.AddToAlbum(item, albums[c].id);
+                if (SelectedItem != null)
+                {
+                    C.AddToAlbum(SelectedItem.uuid, albums[c].id);
+                }
+                else
+                {
+                    foreach (Guid item in SelectedItems)
+                        C.AddToAlbum(item, albums[c].id);
+                }
             }
         }
 
         await CloseBtnClick();
 
         if (!ShowCheckCancelButtons) return; //Needed for UploadApply. Can't run these because no checks to clear.
-            await ClearChecks();
+        await ClearChecks();
     }
 }
