MediaList is no longer static

--- a/PSS/PSS/Shared/LibraryContentViewer.razor
+++ b/PSS/PSS/Shared/LibraryContentViewer.razor
@@ -49,7 +49,7 @@ else
 
 @code{
 	///Stores all content loaded.
-	public static List<C.MediaRow> MediaList { get; private set; }
+	public List<C.MediaRow> MediaList { get; private set; }
 
 	///A single item for viewing.
 	private Guid SelectedItem
